--- a/views/home.html
+++ b/views/home.html
@@ -1,1 +1,6 @@
-<h1>HomePage</h1>
+<div class="content">
+  <h1 style="text-align:center;">HomePage</h1>
+  <random-ninja ninjas="ninjas" title="'Random Ninja'">
+    <p>Check out random ninja!!</p>
+  </random-ninja>
+</div>
