--- a/content/css/styles.css
+++ b/content/css/styles.css
@@ -106,12 +106,20 @@ body{
     border: 2px solid #ddd;
     margin: 10px 0;
   }
+  .content textarea{
+    width: 90%;
+    padding: 10px 5%;
+    border-radius: 10px;
+    border: 2px solid #ddd;
+    margin: 10px 0;
+  }
   
   .content input[type="submit"]:last-child{
     width: 150px;
     display: block;
     margin: 15px auto;
   }
+
   
   .remove{
     float: right;
@@ -123,4 +131,46 @@ body{
     color: crimson;
     cursor: pointer;
     margin-left: 10px;
+  }
+
+  main.ng-enter {
+    transition:0.5s linear all;
+    opacity:0;
+  }
+  
+  /* The finishing CSS styles for the enter animation */
+  main.ng-enter.ng-enter-active {
+    opacity:1;
+  }
+
+  #ninja-list li.ng-enter{
+    transition:0.2s linear all;
+    opacity:0;
+    transform: translateY(30px);
+  }
+  #ninja-list li.ng-enter.ng-enter-active{
+    opacity:1;
+    transform: translateY(0);
+  }
+
+  #ninja-list li.ng-leave{
+    transition:0.2s linear all;
+    opacity:1;
+    transform: translateX(0px);
+  }
+  #ninja-list li.ng-leave.ng-leave-active{
+    opacity:0;
+    transform: translateX(-100%);
+  }
+  #ninja-list li.ng-leave-stagger{
+    transition-delay:0.2s;
+    transition-duration: 0;
+  }
+
+  input.ng-invalid.ng-touched,textarea.ng-invalid.ng-touched{
+    border: 2px solid red;
+  }
+  input[disabled="disabled"]{
+    opacity: 0.4;
+    cursor: not-allowed !important;
   }
